force-app/main/default/objects/Case/fields/CancelCalculate__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約精算</label>
    <referenceTo>CancelCalculate__c</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>CancelCalculateCase</relationshipName>
    <type>Lookup</type>
</CustomField>