force-app/main/default/objects/Case/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <externalId>true</externalId>
    <label>ケースID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>