force-app/main/default/objects/Case/fields/ChangeRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeRemittanceDate__c</fullName>
    <label>変更年月日送金</label>
    <length>255</length>
    <type>Text</type>
</CustomField>