force-app/main/default/objects/Case/fields/ChangeRentMonth__c.field-meta.xml
<CustomField>
    <fullName>ChangeRentMonth__c</fullName>
    <label>変更家賃月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>