force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>CASE( Origin, &quot;メール&quot;, IMAGE(&quot;/resource/OriginIcon/Email.png&quot;, &quot;メール&quot;, 22, 22), 
&quot;電話&quot;, IMAGE(&quot;/resource/OriginIcon/Phone.png&quot;, &quot;電話&quot;, 22, 22), 
&quot;Web&quot;, IMAGE(&quot;/resource/OriginIcon/Web.png&quot;, &quot;Web&quot;, 22, 22), 
IMAGE(&quot;/resource/OriginIcon/WebCase.png&quot;, &quot;Web&quot;, 22, 22))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発生源アイコン</label>
    <type>Text</type>
</CustomField>