force-app/main/default/objects/Case/fields/ClaimTrouble__c.field-meta.xml
<CustomField>
    <fullName>ClaimTrouble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>クレーム・トラブル</label>
    <type>Checkbox</type>
</CustomField>