force-app/main/default/objects/Case/fields/CompletedReportDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedReportDate__c</fullName>
    <label>完了報告日</label>
    <type>Date</type>
</CustomField>