force-app/main/default/objects/Case/fields/CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CompletionDate__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>