force-app/main/default/objects/Case/fields/ConclusionDocumentScrutinist__c.field-meta.xml
<CustomField>
    <fullName>ConclusionDocumentScrutinist__c</fullName>
    <label>締結書類精査者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>