force-app/main/default/objects/Case/fields/ContactContentClass__c.field-meta.xml
<CustomField>
    <fullName>ContactContentClass__c</fullName>
    <label>事故連絡詳細</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>漏水加害</fullName>
            </value>
            <value>
                <fullName>漏水被害</fullName>
            </value>
            <value>
                <fullName>火事</fullName>
            </value>
            <value>
                <fullName>盗難</fullName>
            </value>
            <value>
                <fullName>天災</fullName>
            </value>
            <value>
                <fullName>死亡</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>