force-app/main/default/objects/Case/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <label>連絡先FAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>