force-app/main/default/objects/Case/fields/ContactOther__c.field-meta.xml
<CustomField>
    <fullName>ContactOther__c</fullName>
    <label>連絡先（登録者以外に連絡する場合）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>