force-app/main/default/objects/Case/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>連絡先電話番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>