force-app/main/default/objects/Case/fields/ContractManagement__c.field-meta.xml
<CustomField>
    <fullName>ContractManagement__c</fullName>
    <label>契約管理へ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>