force-app/main/default/objects/Case/fields/CorrespondenceEndDateCheck__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceEndDateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>対応終了日チェック</label>
    <type>Checkbox</type>
</CustomField>