force-app/main/default/objects/Case/fields/CreatedRentId__c.field-meta.xml
<CustomField>
    <fullName>CreatedRentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>作成時家賃ID</label>
    <referenceTo>Rent__c</referenceTo>
    <relationshipName>CaseRentRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>