force-app/main/default/objects/Case/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>不具合</label>
    <type>Checkbox</type>
</CustomField>