force-app/main/default/objects/Case/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>クレーム・トラブル宛先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>家主</fullName>
            </value>
            <value>
                <fullName>管理会社</fullName>
            </value>
            <value>
                <fullName>仲介会社</fullName>
            </value>
            <value>
                <fullName>修繕業者</fullName>
            </value>
            <value>
                <fullName>入居者</fullName>
            </value>
            <value>
                <fullName>借主法人</fullName>
            </value>
            <value>
                <fullName>近隣住民</fullName>
            </value>
            <value>
                <fullName>引越業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>