force-app/main/default/objects/Case/fields/DocumentCollectDueDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectDueDate__c</fullName>
    <label>書類回収期日</label>
    <type>Date</type>
</CustomField>