force-app/main/default/objects/Case/fields/DocumentCollectExpecteder__c.field-meta.xml
<CustomField>
    <fullName>DocumentCollectExpecteder__c</fullName>
    <label>書類回収予定者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>