force-app/main/default/objects/Case/fields/DocumentReminder1__c.field-meta.xml
<CustomField>
    <fullName>DocumentReminder1__c</fullName>
    <label>書類督促者1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>