force-app/main/default/objects/Case/fields/DocumentReminderDate1__c.field-meta.xml
<CustomField>
    <fullName>DocumentReminderDate1__c</fullName>
    <label>書類督促日1</label>
    <type>Date</type>
</CustomField>