force-app/main/default/objects/Case/fields/DocumentReminderDate2__c.field-meta.xml
<CustomField>
    <fullName>DocumentReminderDate2__c</fullName>
    <label>書類督促日2</label>
    <type>Date</type>
</CustomField>