force-app/main/default/objects/Case/fields/DocumentSendDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentSendDate__c</fullName>
    <label>書類送付日</label>
    <type>Date</type>
</CustomField>