force-app/main/default/objects/Case/fields/FinanceRemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>FinanceRemittanceDate__c</fullName>
    <label>経理送金日</label>
    <type>Date</type>
</CustomField>