force-app/main/default/objects/Case/fields/ImportantInfoSupport__c.field-meta.xml
<CustomField>
    <fullName>ImportantInfoSupport__c</fullName>
    <label>重要事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>