force-app/main/default/objects/Case/fields/InitialResponse__c.field-meta.xml
<CustomField>
    <fullName>InitialResponse__c</fullName>
    <label>初動対応</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>