force-app/main/default/objects/Case/fields/IsDepositConservation__c.field-meta.xml
<CustomField>
    <fullName>IsDepositConservation__c</fullName>
    <label>敷金保全の要否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>要</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>