force-app/main/default/objects/Case/fields/LegalInitialInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>LegalInitialInspectionDate__c</fullName>
    <label>法務初動点検日</label>
    <type>Date</type>
</CustomField>