force-app/main/default/objects/Case/fields/NextResponseDate__c.field-meta.xml
<CustomField>
    <fullName>NextResponseDate__c</fullName>
    <label>次回対応日</label>
    <type>Date</type>
</CustomField>