force-app/main/default/objects/Case/fields/Notice__c.field-meta.xml
<CustomField>
    <fullName>Notice__c</fullName>
    <label>連絡事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>