force-app/main/default/objects/Case/fields/OtherContent__c.field-meta.xml
<CustomField>
    <fullName>OtherContent__c</fullName>
    <label>その他詳細</label>
    <type>TextArea</type>
</CustomField>