force-app/main/default/objects/Case/fields/OwnershipTransferDate__c.field-meta.xml
<CustomField>
    <fullName>OwnershipTransferDate__c</fullName>
    <label>所有権移転年月</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>