force-app/main/default/objects/Case/fields/ProcessPractitioner__c.field-meta.xml
<CustomField>
    <fullName>ProcessPractitioner__c</fullName>
    <label>処理実施者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>