force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>