force-app/main/default/objects/Case/fields/ProgressDays__c.field-meta.xml
<CustomField>
    <fullName>ProgressDays__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>経過日数</label>
    <type>Text</type>
</CustomField>