force-app/main/default/objects/Case/fields/PropertyParkingName__c.field-meta.xml
<CustomField>
    <fullName>PropertyParkingName__c</fullName>
    <label>対象の物件/駐車場</label>
    <length>255</length>
    <type>Text</type>
</CustomField>