force-app/main/default/objects/Case/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>RealEstate__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>Gnd8</relationshipName>
    <type>Lookup</type>
</CustomField>