force-app/main/default/objects/Case/fields/Receptionist__c.field-meta.xml
<CustomField>
    <fullName>Receptionist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>受付者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>