force-app/main/default/objects/Case/fields/RemittanceResumptionDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceResumptionDate__c</fullName>
    <label>送金再開年月</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>