force-app/main/default/objects/Case/fields/RemittanceStopRequestDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceStopRequestDate__c</fullName>
    <label>送金停止依頼日</label>
    <type>Date</type>
</CustomField>