force-app/main/default/objects/Case/fields/RemittanceSuspensionEndDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceSuspensionEndDate__c</fullName>
    <label>送金停止終了年月</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>