force-app/main/default/objects/Case/fields/RemittanceSuspensionStartDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceSuspensionStartDate__c</fullName>
    <label>送金停止開始年月</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>