force-app/main/default/objects/Case/fields/Renter__c.field-meta.xml
<CustomField>
    <fullName>Renter__c</fullName>
    <label>賃貸人</label>
    <length>255</length>
    <type>Text</type>
</CustomField>