force-app/main/default/objects/Case/fields/RequestDetails__c.field-meta.xml
<CustomField>
    <fullName>RequestDetails__c</fullName>
    <label>依頼要望詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>