force-app/main/default/objects/Case/fields/RequestRequestVariousInquiry__c.field-meta.xml
<CustomField>
    <fullName>RequestRequestVariousInquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>要望・依頼・問い合わせ</label>
    <type>Checkbox</type>
</CustomField>