force-app/main/default/objects/Case/fields/ResponsibleConfirmer__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleConfirmer__c</fullName>
    <label>責任者確認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>