force-app/main/default/objects/Case/fields/ReturnReminderCollectDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnReminderCollectDate__c</fullName>
    <label>返送督促回収日</label>
    <type>Date</type>
</CustomField>