force-app/main/default/objects/Case/fields/ReturnReminderCollector__c.field-meta.xml
<CustomField>
    <fullName>ReturnReminderCollector__c</fullName>
    <label>返送督促回収者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>