force-app/main/default/objects/Case/fields/ReturnReminderDocument__c.field-meta.xml
<CustomField>
    <fullName>ReturnReminderDocument__c</fullName>
    <label>返送督促書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>