force-app/main/default/objects/Case/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>hMPn</relationshipName>
    <type>Lookup</type>
</CustomField>