force-app/main/default/objects/Case/fields/SystemOperationReceiptDate2__c.field-meta.xml
<CustomField>
    <fullName>SystemOperationReceiptDate2__c</fullName>
    <label>ＳＯ受領日2</label>
    <type>Date</type>
</CustomField>