force-app/main/default/objects/Case/fields/SystemOperationReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>SystemOperationReceiptDate__c</fullName>
    <label>ＳＯ受領日</label>
    <type>Date</type>
</CustomField>