force-app/main/default/objects/Case/fields/SystemOperationRecipient__c.field-meta.xml
<CustomField>
    <fullName>SystemOperationRecipient__c</fullName>
    <label>ＳＯ受領担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>