force-app/main/default/objects/Case/fields/SystemOperationRequestNote__c.field-meta.xml
<CustomField>
    <fullName>SystemOperationRequestNote__c</fullName>
    <label>シスオペ依頼備考</label>
    <type>TextArea</type>
</CustomField>