force-app/main/default/objects/Case/fields/TeamManagementMemo__c.field-meta.xml
<CustomField>
    <fullName>TeamManagementMemo__c</fullName>
    <label>チーム管理メモ</label>
    <type>TextArea</type>
</CustomField>