force-app/main/default/objects/Case/fields/tenant__c.field-meta.xml
<CustomField>
    <fullName>tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入居者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>tenants</relationshipName>
    <type>Lookup</type>
</CustomField>