force-app/main/default/objects/Case/fields/ToSNTClaimContent__c.field-meta.xml
<CustomField>
    <fullName>ToSNTClaimContent__c</fullName>
    <label>クレームSNT宛詳細</label>
    <type>TextArea</type>
</CustomField>