force-app/main/default/objects/Case/fields/TraderRequestDateTime__c.field-meta.xml
<CustomField>
    <fullName>TraderRequestDateTime__c</fullName>
    <label>業者依頼日時</label>
    <type>DateTime</type>
</CustomField>