force-app/main/default/objects/Case/fields/VariousContent__c.field-meta.xml
<CustomField>
    <fullName>VariousContent__c</fullName>
    <label>要望・依頼・問い合わせ詳細</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>