force-app/main/default/objects/Case/recordTypes/Inside.recordType-meta.xml
<RecordType>
    <fullName>Inside</fullName>
    <active>true</active>
    <businessProcess>社内</businessProcess>
    <label>社内から登録</label>
</RecordType>