force-app/main/default/objects/Case/recordTypes/Outside.recordType-meta.xml
<RecordType>
    <fullName>Outside</fullName>
    <active>true</active>
    <businessProcess>社外</businessProcess>
    <label>社外から登録</label>
</RecordType>