force-app/main/default/objects/Case/validationRules/ProhibitClose.validationRule-meta.xml
<ValidationRule>
    <fullName>ProhibitClose</fullName>
    <active>false</active>
    <errorConditionFormula>IF( $Profile.Name = &apos;システム管理者&apos; ,FALSE,ISPICKVAL( Status , &apos;クローズ&apos;))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>システム管理者以外はケースをクローズにできません。</errorMessage>
</ValidationRule>