force-app/main/default/objects/Case/listViews/AcceptQueue_Case.listView-meta.xml
<ListView>
    <fullName>AcceptQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>受付チーム</label>
    <queue>AcceptQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>