force-app/main/default/objects/Case/listViews/AllCases.listView-meta.xml
<ListView>
    <fullName>AllCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Rank__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>Staff__c</columns>
    <columns>ChargeTeam__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Change__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのケース</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>