force-app/main/default/objects/Case/listViews/CancelApplicationTeam_Case.listView-meta.xml
<ListView>
    <fullName>CancelApplicationTeam_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>解約申入チーム</label>
    <queue>CancelApplicationTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>