force-app/main/default/objects/Case/listViews/ChangeGroup_Case.listView-meta.xml
<ListView>
    <fullName>ChangeGroup_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>入替チーム</label>
    <queue>ChangeGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>