force-app/main/default/objects/Case/listViews/ConditionChangeQueue_Case.listView-meta.xml
<ListView>
    <fullName>ConditionChangeQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>条件変更チーム</label>
    <queue>ConditionChangeQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>