force-app/main/default/objects/Case/listViews/DataManagementQueue_Case.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>