force-app/main/default/objects/Case/listViews/EmployeePortalView.listView-meta.xml
<ListView>
    <fullName>EmployeePortalView</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>RealEstate__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>お問い合わせ履歴</label>
</ListView>