force-app/main/default/objects/Case/listViews/FinanceQueue_Case.listView-meta.xml
<ListView>
    <fullName>FinanceQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>経理チーム</label>
    <queue>FinanceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>