force-app/main/default/objects/Case/listViews/NewMatterQueue_Case.listView-meta.xml
<ListView>
    <fullName>NewMatterQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>新規チーム</label>
    <queue>NewMatterQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>