force-app/main/default/objects/Case/listViews/RenewalQueue_Case.listView-meta.xml
<ListView>
    <fullName>RenewalQueue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>更新チーム</label>
    <queue>RenewalQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>