force-app/main/default/objects/Case/listViews/TestGroup1_Case.listView-meta.xml
<ListView>
    <fullName>TestGroup1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>解約精算チーム</label>
    <queue>CancelCalculateTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>